--- a/index.html
+++ b/index.html
@@ -137,13 +137,75 @@
 							you’ll be added to a special Backer member list.
 						</h6>
 
-						<span class="h1">
-							101
-						</span>
+						<div>
+							<span class="h1">
+								101
+							</span>
+	
+							<p>
+								left
+							</p>
+						</div>
 
-						<p>
-							left
-						</p>
+						<div>
+							<button class="select btn">
+								Select Reward
+							</button>
+						</div>
+					</div>
+
+					<div class="card">
+						<h4 class="h4 title">Black Edition Stand</h4>
+
+						<h5 class="h4 price">Pledge $75 or more</h5>
+
+						<h6 class="h4">
+							You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
+  							you’ll be added to a special Backer member list.
+						</h6>
+
+						<div>
+							<span class="h1">
+								64
+							</span>
+	
+							<p>
+								left
+							</p>
+						</div>
+
+						<div>
+							<button class="select btn">
+								Select Reward
+							</button>
+						</div>
+					</div>
+
+					<div class="card">
+						<h4 class="h4 title">Mahogany Special Edition</h4>
+
+						<h5 class="h4 price">Pledge $200 or more</h5>
+
+						<h6 class="h4">
+							You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
+  							to our Backer member list. Shipping is included.
+						</h6>
+
+						<div>
+							<span class="h1">
+								0
+							</span>
+	
+							<p>
+								left
+							</p>
+						</div>
+
+						<div>
+							<button class="stock btn">
+								Out of Stock
+							</button>
+						</div>
 					</div>
 				</div>
 			</div>
